--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
             <div class="row mt-5">
 
-                <div class="col-lg-6 d-flex align-items-stretch">
+                <div class="col-lg-6">
                     <div class="card text-bg-body-secondary mt-3 border-info" style="width: 100%">
                         <div class="card-header">Python</div>
                         <div class="card-body">
@@ -499,12 +499,88 @@
 
                             <h5 class="card-title display-6 fw-bold mt-4">FlashLine_</h5>
 
-                            <div class="my-4 card-text">
-                                <p>FlashLine_ ist eine Kommandozeilenanwendung zum Verwalten und Lernen von Karteikarten. Das Programm kommt mit einer eignen UI-Bibliothek und Speicherfunktion über JSON. FlashLine_ wurde als Abschlussprojekt für CS50's Introduction to Programming with Python von HarvardX erstellt.</p>
+                            <a href="https://github.com/alex-kadur/FlashLine_/" class="btn btn-primary my-3" role="button">
+                                <i class="bi bi-github me-3"></i>GitHub
+                            </a>
+
+                            <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePFL" aria-expanded="false" aria-controls="collapsePFL">
+                                <i class="bi bi-info-circle-fill me-3"></i>mehr
+                            </button>
+
+                            <div id="collapsePFL" class="collapse">
+                                <div class="mt-4 card-text alert alert-info">
+                                    <p>FlashLine_ ist eine Kommandozeilenanwendung zum Verwalten und Lernen von Karteikarten. Das Programm kommt mit einer eignen UI-Bibliothek und Speicherfunktion über JSON. FlashLine_ wurde als Abschlussprojekt für CS50's Introduction to Programming with Python von HarvardX erstellt.</p>
+                                </div>
                             </div>
 
-                            <div class="my-4">
-                                <a href="https://github.com/alex-kadur/FlashLine_" class="btn btn-primary"><i class="bi bi-github me-3"></i>GitHub</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="card text-bg-body-secondary mt-3 border-info" style="width: 100%">
+                        <div class="card-header">Python</div>
+                        <div class="card-body">
+
+                            <div class="ratio ratio-16x9">
+                                <iframe src="" type="text/html" id="staticPlayer"></iframe>
+                            </div>
+
+                            <h5 class="card-title display-6 fw-bold mt-4">Projektsammlung: CS50P</h5>
+
+                            <a href="https://github.com/alex-kadur/Python/" class="btn btn-primary my-3" role="button">
+                                <i class="bi bi-github me-3"></i>GitHub
+                            </a>
+
+                            <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePCS50P" aria-expanded="false" aria-controls="collapsePCS50P">
+                                <i class="bi bi-info-circle-fill me-3"></i>mehr
+                            </button>
+
+                            <div id="collapsePCS50P" class="collapse">
+                                <div class="mt-4 card-text alert alert-info">
+                                    <p>Repository mit 41 Programmieraufgaben unterschiedlichen Umfangs, die ich für CS50's Introduction to Programming with Python bearbeitet habe.</p>
+                                    <p class="fw-bold">Beispiele</p>
+                                    <uL>
+                                        <li><a href="https://github.com/alex-kadur/Python/tree/3d4ab3803fb1a7205589a23ded326aabe3458d7a/Problem%20Sets/Week%208/Seasons%20of%20Love">Seasons of Love</a> gibt das Alter des Benutzers in Minuten aus, wobei englische Wörter anstelle von Ziffern verwendet werden.</li>
+                                        <li><a href="https://github.com/alex-kadur/Python/tree/3d4ab3803fb1a7205589a23ded326aabe3458d7a/Problem%20Sets/Week%206/Lines%20of%20Code">Lines of Code</a> gibt die Anzahl der Code-Zeilen (ohne Kommentare und Leerzeilen) in einer beliebigen Python-Datei aus.</li> 
+                                        <li><a href="https://github.com/alex-kadur/Python/tree/3d4ab3803fb1a7205589a23ded326aabe3458d7a/Problem%20Sets/Week%207/NUMB3RS">NUMB3RS</a> prüft IPv4-Adressen mit Hilfe von regulären Ausdrücken.</li>
+                                        <li><a href="https://github.com/alex-kadur/Python/tree/3d4ab3803fb1a7205589a23ded326aabe3458d7a/Problem%20Sets/Week%208/Cookie%20Jar">Cookie Jar</a> implementiert eine "Keksdose" mit verschiedene Methoden, die von Tests begleitet werden.</li>
+                                        <li><a href="https://github.com/alex-kadur/Python/tree/3d4ab3803fb1a7205589a23ded326aabe3458d7a/Problem%20Sets/Week%206/CS50%20P-Shirt">CS50 Shirtificate</a> erzeugt eine PDF-Datei anhand von Benutzereingaben und einer Bilddatei.</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="card text-bg-body-secondary mt-3 border-info" style="width: 100%">
+                        <div class="card-header">C</div>
+                        <div class="card-body">
+
+                            <div class="ratio ratio-16x9">
+                                <iframe src="" type="text/html" id="staticPlayer"></iframe>
+                            </div>
+
+                            <h5 class="card-title display-6 fw-bold mt-4">Projektsammlung: CS50X</h5>
+
+                            <a href="https://github.com/alex-kadur/C_CS50" class="btn btn-primary my-3" role="button">
+                                <i class="bi bi-github me-3"></i>GitHub
+                            </a>
+
+                            <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePCS50X" aria-expanded="false" aria-controls="collapsePCS50X">
+                                <i class="bi bi-info-circle-fill me-3"></i>mehr
+                            </button>
+
+                            <div id="collapsePCS50X" class="collapse">
+                                <div class="mt-4 card-text alert alert-info">
+                                    <p>Repository mit aktuell ... Programmieraufgaben, die ich für CS50’s Introduction to Computer Science bearbeitet habe.</p>
+                                    <p class="fw-bold">Beispiele</p>
+                                    <uL>
+
+                                    </ul>
+                                </div>
                             </div>
 
                         </div>
@@ -593,4 +669,3 @@
   </body>
 
 </html>
-
