--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
                             <div id="collapsePCS50X" class="collapse">
                                 <div class="mt-4 card-text alert alert-info">
-                                    <p>Repository mit aktuell ... Programmieraufgaben, die ich für CS50’s Introduction to Computer Science bearbeitet habe.</p>
+                                    <p>Repository, das verschiedene Programmieraufgaben enthält, die ich für CS50’s Introduction to Computer Science bearbeitet habe. Da der Kurs aktuell läuft, kommen regelmäßig Inhalte hinzu.</p>
                                     <p class="fw-bold">Beispiele</p>
                                     <uL>
 
