--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link href="styles.css" rel="stylesheet">
 </head>
 
@@ -59,9 +60,22 @@
 
         <section class="container mt-2 bg-body-secondary p-4 rounded-2">
 
-            <div class="bg-primary bg-gradient p-4 rounded-2">
-                <h1 class="display-2 fw-bold">A. KADUR</h1>
-                <h2 class="display-6 mt-3">zukünftiger Software-Entwickler</h2>
+            <div class="row mt-3 align-items-center bg-primary bg-gradient p-4 rounded-2">
+                <div class="col-lg-6">
+                    <h1 class="display-2 fw-bold">A. KADUR</h1>
+                    <h2 class="display-6">zukünftiger Software-Entwickler</h2>
+                </div>
+
+                <div class="col-lg-6 d-none d-sm-inline mt-5">
+                    <div>
+                        <i class="devicon-c-plain-wordmark me-3 " style="font-size: 3rem"></i>
+                        <i class="devicon-python-plain-wordmark me-3" style="font-size: 3rem"></i>
+                        <i class="devicon-mysql-plain-wordmark me-3" style="font-size: 3rem"></i>
+                        <i class="devicon-html5-plain-wordmark me-3" style="font-size: 3rem"></i>
+                        <i class="devicon-css3-plain-wordmark me-3" style="font-size: 3rem"></i>
+                        <i class="devicon-bootstrap-plain-wordmark me-3" style="font-size: 3rem"></i>
+                    </div>
+                </div>
             </div>
 
             <div class="row mt-3 align-items-center">
@@ -74,7 +88,6 @@
                                 nach einem Praktikumsplatz für den Zeitraum 30.09.2024 bis 21.05.2025.</strong><br>
                             <br>Es handelt sich dabei um ein unvergütetes Pflichtpraktikum, welches für die Zulassung
                             zur Prüfung vor der IHK vorgeschrieben ist.<br>
-
                             <br><a href="#kontakt">Kommen Sie gern auf mich zu.</a>
                         </p>
                     </div>
@@ -528,8 +541,7 @@
                             <div class="card-header">planvoll</div>
                             <div class="card-body">
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item mt-3"><i class="bi bi-zoom-in"
-                                            style="font-size: 2.5rem"></i>
+                                    <li class="list-group-item"><i class="bi bi-zoom-in" style="font-size: 2.5rem"></i>
                                         <h5 class="card-title mt-3">Konzeptionskompetenz</h5>
                                     </li>
                                     <li class="list-group-item mt-3"><i class="bi bi-stack"
@@ -563,8 +575,7 @@
                             <div class="card-header">umsetzungsstark</div>
                             <div class="card-body">
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item mt-3"><i class="bi bi-map-fill"
-                                            style="font-size: 2.5rem"></i>
+                                    <li class="list-group-item"><i class="bi bi-map-fill" style="font-size: 2.5rem"></i>
                                         <h5 class="card-title mt-3">Zielorientierung</h5>
                                     </li>
                                     <li class="list-group-item mt-3"><i class="bi bi-tools"
@@ -596,7 +607,7 @@
                             <div class="card-header">kommunikativ</div>
                             <div class="card-body">
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item mt-3"><i class="bi bi-chat-dots-fill"
+                                    <li class="list-group-item"><i class="bi bi-chat-dots-fill"
                                             style="font-size: 2.5rem"></i>
                                         <h5 class="card-title mt-3">Kommunikation</h5>
                                     </li>
@@ -830,8 +841,8 @@
 
                                 <div id="collapseSortVis" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Interaktive Kommandozeilen-Anwendung zur Visualisierung verschiedener
-                                            Sortierverfahren.</p>
+                                        <p>Visualisierung verschiedener Sortierverfahren als interaktive
+                                            Kommandozeilen-Anwendung.</p>
                                         <p class="fw-bold">Verahren</p>
                                         <uL>
                                             <li><a href="">Quicksort</a></li>
@@ -915,7 +926,6 @@
                 </div>
             </footer>
         </div>
-
 
         <!--Scrollspy-->
     </div>
