updated projects LexiGuess_

--- a/index.html
+++ b/index.html
@@ -745,25 +745,28 @@
                                     <iframe src="" type="text/html" id="staticPlayer"></iframe>
                                 </div>
 
-                                <h5 class="card-title display-6 fw-bold mt-4">Wordle_</h5>
+                                <h5 class="card-title display-6 fw-bold mt-4">LexiGuess_</h5>
 
-                                <a href="" class="btn btn-primary my-3" role="button">
+                                <a href="https://github.com/alex-kadur/LexiGuess_" class="btn btn-primary my-3"
+                                    role="button">
                                     <i class="bi bi-github me-3"></i>GitHub
                                 </a>
 
                                 <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseWordle50" aria-expanded="false"
-                                    aria-controls="collapseWordle50">
+                                    data-bs-target="#collapseLexiGuess" aria-expanded="false"
+                                    aria-controls="collapseLexiGuess">
                                     <i class="bi bi-info-circle-fill me-3"></i>mehr
                                 </button>
 
-                                <div id="collapseWordle50" class="collapse">
+                                <div id="collapseLexiGuess" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>Umsetzung des beliebten Online-Buchstabenspiels Wordle als
-                                            Kommandozeilen-Anwendung in C.<br>
-                                            <br>Das Programm wurde urspruenglich im Rahmen einer Programmieraufgabe für
-                                            CS50’s Introduction to Computer Science erstellt und nachfolgend angepasst,
-                                            um Abhängigkeiten zu eliminieren.
+                                        <p>LexiGuess_ ist ein Worträtselspiel vergleichbar mit 'Wordle'. Spieler
+                                            versuchen, ein Wort innerhalb einer begrenzten Anzahl von Versuchen zu
+                                            erraten.<br>
+                                            <br>Das Spiel wurde ursprünglich für CS50’s Introduction to Computer Science
+                                            erstellt, ähnelt dieser ursprünglichen Lösung allerdings nur noch teilweise.
+                                            Das Programm wurde stark modifiziert und erweitert, um Abhängigkeiten zu
+                                            entfernen, die Spiellogik zu verfeinern und Funktionalitäten hinzuzufügen.
                                         </p>
                                     </div>
                                 </div>
