--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                                             versuchen, ein Wort innerhalb einer begrenzten Anzahl von Versuchen zu
                                             erraten.<br>
                                             <br>Das Spiel wurde ursprünglich für CS50’s Introduction to Computer Science
-                                            erstellt, ähnelt dieser ursprünglichen Lösung allerdings nur noch teilweise.
+                                            erstellt, ähnelt dieser originalen Form allerdings nur noch teilweise.
                                             Das Programm wurde stark modifiziert und erweitert, um Abhängigkeiten zu
                                             entfernen, die Spiellogik zu verfeinern und Funktionalitäten hinzuzufügen.
                                         </p>
