updated project SortViz_

--- a/index.html
+++ b/index.html
@@ -691,53 +691,6 @@
 
                     <div class="col-lg-6">
                         <div class="card text-bg-body-secondary mt-3 border-info" style="width: 100%">
-                            <div class="card-header">Python</div>
-                            <div class="card-body">
-
-                                <div class="ratio ratio-16x9">
-                                    <iframe src="" type="text/html" id="staticPlayer"></iframe>
-                                </div>
-
-                                <h5 class="card-title display-6 fw-bold mt-4">Projektsammlung: CS50P</h5>
-
-                                <a href="https://github.com/alex-kadur/Python/" class="btn btn-primary my-3"
-                                    role="button">
-                                    <i class="bi bi-github me-3"></i>GitHub
-                                </a>
-
-                                <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsePCS50P" aria-expanded="false"
-                                    aria-controls="collapsePCS50P">
-                                    <i class="bi bi-info-circle-fill me-3"></i>mehr
-                                </button>
-
-                                <div id="collapsePCS50P" class="collapse">
-                                    <div class="mt-4 card-text alert alert-info">
-                                        <p>Eine kleine Auswahl von Programmieraufgaben unterschiedlichen Umfangs, die
-                                            ich für CS50's Introduction to Programming with Python bearbeitet habe.</p>
-                                        <p class="fw-bold">Beispiele</p>
-                                        <uL>
-                                            <li><a
-                                                    href="https://github.com/alex-kadur/Python/tree/3d4ab3803fb1a7205589a23ded326aabe3458d7a/Problem%20Sets/Week%208/Seasons%20of%20Love">Seasons
-                                                    of Love</a> gibt das Alter des Benutzers in Minuten aus, wobei
-                                                englische Wörter anstelle von Ziffern verwendet werden.</li>
-                                            <li><a
-                                                    href="https://github.com/alex-kadur/Python/tree/3d4ab3803fb1a7205589a23ded326aabe3458d7a/Problem%20Sets/Week%206/Lines%20of%20Code">Lines
-                                                    of Code</a> gibt die Anzahl der Code-Zeilen (ohne Kommentare und
-                                                Leerzeilen) in einer beliebigen Python-Datei aus.</li>
-                                            <li><a
-                                                    href="https://github.com/alex-kadur/Python/tree/3d4ab3803fb1a7205589a23ded326aabe3458d7a/Problem%20Sets/Week%207/NUMB3RS">NUMB3RS</a>
-                                                prüft IPv4-Adressen mit Hilfe von regulären Ausdrücken.</li>
-                                        </ul>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="card text-bg-body-secondary mt-3 border-info" style="width: 100%">
                             <div class="card-header">C</div>
                             <div class="card-body">
 
@@ -784,74 +737,23 @@
                                     <iframe src="" type="text/html" id="staticPlayer"></iframe>
                                 </div>
 
-                                <h5 class="card-title display-6 fw-bold mt-4">Projektsammlung: CS50X</h5>
+                                <h5 class="card-title display-6 fw-bold mt-4">SortViz_</h5>
 
-                                <a href="https://github.com/alex-kadur/C_CS50" class="btn btn-primary my-3"
+                                <a href="https://github.com/alex-kadur/SortViz_" class="btn btn-primary my-3"
                                     role="button">
                                     <i class="bi bi-github me-3"></i>GitHub
                                 </a>
 
                                 <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsePCS50X" aria-expanded="false"
-                                    aria-controls="collapsePCS50X">
+                                    data-bs-target="#collapseSortViz" aria-expanded="false"
+                                    aria-controls="collapseSortViz">
                                     <i class="bi bi-info-circle-fill me-3"></i>mehr
                                 </button>
 
-                                <div id="collapsePCS50X" class="collapse">
-                                    <div class="mt-4 card-text alert alert-info">
-                                        <p>Eine kleine Auswahl von Programmieraufgaben unterschiedlichen Umfangs, die
-                                            ich bisher für CS50’s Introduction to Computer Science bearbeitet habe.</p>
-                                        <p class="fw-bold">Beispiele</p>
-                                        <uL>
-                                            <li><a href="">Titel</a> Lorem ipsum dolor sit amet consectetur adipisicing
-                                                elit. Minima fugit officia esse facere obcaecati et! Quibusdam eum amet,
-                                                voluptatibus provident earum sed voluptatem quidem voluptatum.</li>
-                                            <li><a href="">Titel</a> Lorem ipsum dolor sit amet consectetur adipisicing
-                                                elit. Minima fugit officia esse facere obcaecati et! Quibusdam eum amet,
-                                                voluptatibus provident earum sed voluptatem quidem voluptatum.</li>
-                                            <li><a href="">Titel</a> Lorem ipsum dolor sit amet consectetur adipisicing
-                                                elit. Minima fugit officia esse facere obcaecati et! Quibusdam eum amet,
-                                                voluptatibus provident earum sed voluptatem quidem voluptatum.</li>
-                                        </ul>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="card text-bg-body-secondary mt-3 border-info" style="width: 100%">
-                            <div class="card-header">C</div>
-                            <div class="card-body">
-
-                                <div class="ratio ratio-16x9">
-                                    <iframe src="" type="text/html" id="staticPlayer"></iframe>
-                                </div>
-
-                                <h5 class="card-title display-6 fw-bold mt-4">Sortieralgorithmen</h5>
-
-                                <a href="https://github.com/alex-kadur/C_CS50" class="btn btn-primary my-3"
-                                    role="button">
-                                    <i class="bi bi-github me-3"></i>GitHub
-                                </a>
-
-                                <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseSortVis" aria-expanded="false"
-                                    aria-controls="collapseSortVis">
-                                    <i class="bi bi-info-circle-fill me-3"></i>mehr
-                                </button>
-
-                                <div id="collapseSortVis" class="collapse">
+                                <div id="collapseSortViz" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
                                         <p>Visualisierung verschiedener Sortierverfahren als interaktive
                                             Kommandozeilen-Anwendung.</p>
-                                        <p class="fw-bold">Verahren</p>
-                                        <uL>
-                                            <li><a href="">Quicksort</a></li>
-                                            <li><a href="">Bubblesort</a></li>
-                                            <li><a href="">Gnomesort</a></li>
-                                        </ul>
                                     </div>
                                 </div>
 
