--- a/index.html
+++ b/index.html
@@ -700,18 +700,18 @@
 
                                 <h5 class="card-title display-6 fw-bold mt-4">LexiGuess_</h5>
 
-                                <a href="https://github.com/alex-kadur/LexiGuess_" class="btn btn-primary my-3"
+                                <a href="https://github.com/alex-kadur/LinGuess_ class=" btn btn-primary my-3"
                                     role="button">
                                     <i class="bi bi-github me-3"></i>GitHub
                                 </a>
 
                                 <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseLexiGuess" aria-expanded="false"
-                                    aria-controls="collapseLexiGuess">
+                                    data-bs-target="#collapseLinGuess" aria-expanded="false"
+                                    aria-controls="collapseLinGuess">
                                     <i class="bi bi-info-circle-fill me-3"></i>mehr
                                 </button>
 
-                                <div id="collapseLexiGuess" class="collapse">
+                                <div id="collapseLinGuess" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
                                         <p>LexiGuess_ ist ein Worträtselspiel vergleichbar mit 'Wordle'. Spieler
                                             versuchen, ein Wort innerhalb einer begrenzten Anzahl von Versuchen zu
