--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                                     <iframe src="" type="text/html" id="staticPlayer"></iframe>
                                 </div>
 
-                                <h5 class="card-title display-6 fw-bold mt-4">LexiGuess_</h5>
+                                <h5 class="card-title display-6 fw-bold mt-4">LinGuess_</h5>
 
                                 <a href="https://github.com/alex-kadur/LinGuess_ class=" btn btn-primary my-3"
                                     role="button">
