--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                                     <div class="mt-4 card-text alert alert-info">
                                         <p>Ich bin ab diesem Sommersemester als Teilzeitstudierender im Studiengang
                                             Informatik (B.Sc.) eingeschrieben. In der Vergangenheit habe ich bereits
-                                            länger studiert, fühle der Herrausforderung gewachsen und freue mich auf
-                                            anspruchsvolle Inhalte. Spezielles Interesse zeige ich dabei an der
+                                            länger studiert, fühle mich der Herrausforderung gewachsen und freue mich
+                                            auf anspruchsvolle Inhalte. Spezielles Interesse zeige ich dabei an der
                                             Hochschulmathematik, da ich diesen Punkt in der Ausbildung zum
                                             Fachinformatiker vermisse.</p>
                                     </div>
@@ -700,7 +700,7 @@
 
                                 <h5 class="card-title display-6 fw-bold mt-4">LinGuess_</h5>
 
-                                <a href="https://github.com/alex-kadur/LinGuess_ class=" btn btn-primary my-3"
+                                <a href="https://github.com/alex-kadur/LinGuess_" class="btn btn-primary my-3"
                                     role="button">
                                     <i class="bi bi-github me-3"></i>GitHub
                                 </a>
