--- a/index.html
+++ b/index.html
@@ -658,11 +658,10 @@
                             <div class="card-body">
 
                                 <div class="ratio ratio-16x9">
-                                    <iframe src="//www.youtube.com/embed/a0SNT7joNCU?si=mxcj57Aes_ZB8tTz"
-                                        type="text/html" id="staticPlayer"></iframe>
+                                    <img src="images/flashline_cover.jpg" alt="">
                                 </div>
 
-                                <h5 class="card-title display-6 fw-bold mt-4">FlashLine_</h5>
+                                <h5 class="card-title display-8 fw-bold mt-4">Karteikarten erstellen und lernen</h5>
 
                                 <a href="https://github.com/alex-kadur/FlashLine_/" class="btn btn-primary my-3"
                                     role="button">
@@ -695,10 +694,10 @@
                             <div class="card-body">
 
                                 <div class="ratio ratio-16x9">
-                                    <iframe src="" type="text/html" id="staticPlayer"></iframe>
+                                    <img src="images/linguess_cover.jpg" alt="">
                                 </div>
 
-                                <h5 class="card-title display-6 fw-bold mt-4">LinGuess_</h5>
+                                <h5 class="card-title display-8 fw-bold mt-4">Worträtselspiel in Stil von 'Wordle'</h5>
 
                                 <a href="https://github.com/alex-kadur/LinGuess_" class="btn btn-primary my-3"
                                     role="button">
@@ -713,7 +712,7 @@
 
                                 <div id="collapseLinGuess" class="collapse">
                                     <div class="mt-4 card-text alert alert-info">
-                                        <p>LexiGuess_ ist ein Worträtselspiel vergleichbar mit 'Wordle'. Spieler
+                                        <p>LinGuess_ ist ein Worträtselspiel vergleichbar mit 'Wordle'. Spieler
                                             versuchen, ein Wort innerhalb einer begrenzten Anzahl von Versuchen zu
                                             erraten.<br>
                                             <br>Das Spiel wurde ursprünglich für CS50’s Introduction to Computer Science
