--- a/index.html
+++ b/index.html
@@ -659,18 +659,24 @@
 
                                 <div class="ratio ratio-16x9">
                                     <img src="images/flashline_cover.jpg" alt="">
+                                    <h5 class="card-title display-2 fw-bold mt-4 ms-4">FlashLine_</h5>
                                 </div>
 
-                                <h5 class="card-title display-8 fw-bold mt-4">Karteikarten erstellen und lernen</h5>
+                                <h5 class="card-title display-8 fw-bold my-4">Karteikarten erstellen und lernen</h5>
 
-                                <a href="https://github.com/alex-kadur/FlashLine_/" class="btn btn-primary my-3"
-                                    role="button">
+                                <a href="" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
+                                    <i class="bi bi-youtube me-2"></i>Demo
+                                </a>
+
+                                <a href="https://github.com/alex-kadur/FlashLine_/"
+                                    class="btn btn-primary col-12 mb-2 col-md-4" role="button">
                                     <i class="bi bi-github me-3"></i>GitHub
                                 </a>
 
-                                <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapsePFL" aria-expanded="false" aria-controls="collapsePFL">
-                                    <i class="bi bi-info-circle-fill me-3"></i>mehr
+                                <button class="btn btn-primary col-12 mb-2 col-md-3" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapsePFL" aria-expanded="false"
+                                    aria-controls="collapsePFL">
+                                    <i class="bi bi-info-circle-fill me-3"></i>Info
                                 </button>
 
                                 <div id="collapsePFL" class="collapse">
@@ -695,19 +701,24 @@
 
                                 <div class="ratio ratio-16x9">
                                     <img src="images/linguess_cover.jpg" alt="">
+                                    <h5 class="card-title display-2 fw-bold mt-4 ms-4">LinGuess_</h5>
                                 </div>
 
-                                <h5 class="card-title display-8 fw-bold mt-4">Worträtselspiel in Stil von 'Wordle'</h5>
+                                <h5 class="card-title display-8 fw-bold my-4">Worträtselspiel im Stil von 'Wordle'</h5>
 
-                                <a href="https://github.com/alex-kadur/LinGuess_" class="btn btn-primary my-3"
-                                    role="button">
+                                <a href="" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
+                                    <i class="bi bi-youtube me-2"></i>Demo
+                                </a>
+
+                                <a href="https://github.com/alex-kadur/LinGuess_"
+                                    class="btn btn-primary col-12 mb-2 col-md-4" role="button">
                                     <i class="bi bi-github me-3"></i>GitHub
                                 </a>
 
-                                <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseLinGuess" aria-expanded="false"
+                                <button class="btn btn-primary col-12 mb-2 col-md-3" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseLinGuess" aria-expanded="false"
                                     aria-controls="collapseLinGuess">
-                                    <i class="bi bi-info-circle-fill me-3"></i>mehr
+                                    <i class="bi bi-info-circle-fill me-3"></i>Info
                                 </button>
 
                                 <div id="collapseLinGuess" class="collapse">
@@ -733,20 +744,26 @@
                             <div class="card-body">
 
                                 <div class="ratio ratio-16x9">
-                                    <iframe src="" type="text/html" id="staticPlayer"></iframe>
+                                    <img src="" alt="">
+                                    <h5 class="card-title display-2 fw-bold mt-4 ms-3">SortViz_</h5>
                                 </div>
 
-                                <h5 class="card-title display-6 fw-bold mt-4">SortViz_</h5>
+                                <h5 class="card-title display-8 fw-bold mt-4 my-4">Visualisierung von Sortierverfahren
+                                </h5>
 
-                                <a href="https://github.com/alex-kadur/SortViz_" class="btn btn-primary my-3"
-                                    role="button">
-                                    <i class="bi bi-github me-3"></i>GitHub
+                                <a href="" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
+                                    <i class="bi bi-youtube me-2"></i>Demo
                                 </a>
 
-                                <button class="btn btn-primary my-3" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseSortViz" aria-expanded="false"
+                                <a href="https://github.com/alex-kadur/SortViz_"
+                                    class="btn btn-primary col-12 mb-2 col-md-4" role="button">
+                                    <i class="bi bi-github me-2"></i>GitHub
+                                </a>
+
+                                <button class="btn btn-primary col-12 mb-2 col-md-3" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseSortViz" aria-expanded="false"
                                     aria-controls="collapseSortViz">
-                                    <i class="bi bi-info-circle-fill me-3"></i>mehr
+                                    <i class="bi bi-info-circle-fill me-2"></i>Info
                                 </button>
 
                                 <div id="collapseSortViz" class="collapse">
