added link project FlashLine_

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
 
                                 <h5 class="card-title display-8 fw-bold my-4">Karteikarten erstellen und lernen</h5>
 
-                                <a href="" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
+                                <a href="https://youtu.be/_rOrLG_30Hs" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
                                     <i class="bi bi-youtube me-2"></i>Demo
                                 </a>
 
@@ -731,45 +731,6 @@
                                             Das Programm wurde stark modifiziert und erweitert, um Abhängigkeiten zu
                                             entfernen, die Spiellogik zu verfeinern und Funktionalitäten hinzuzufügen.
                                         </p>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6">
-                        <div class="card text-bg-body-secondary mt-3 border-info" style="width: 100%">
-                            <div class="card-header">C</div>
-                            <div class="card-body">
-
-                                <div class="ratio ratio-16x9">
-                                    <img src="" alt="">
-                                    <h5 class="card-title display-2 fw-bold mt-4 ms-3">SortViz_</h5>
-                                </div>
-
-                                <h5 class="card-title display-8 fw-bold mt-4 my-4">Visualisierung von Sortierverfahren
-                                </h5>
-
-                                <a href="" class="btn btn-primary col-12 mb-2 col-md-3" role="button">
-                                    <i class="bi bi-youtube me-2"></i>Demo
-                                </a>
-
-                                <a href="https://github.com/alex-kadur/SortViz_"
-                                    class="btn btn-primary col-12 mb-2 col-md-4" role="button">
-                                    <i class="bi bi-github me-2"></i>GitHub
-                                </a>
-
-                                <button class="btn btn-primary col-12 mb-2 col-md-3" type="button"
-                                    data-bs-toggle="collapse" data-bs-target="#collapseSortViz" aria-expanded="false"
-                                    aria-controls="collapseSortViz">
-                                    <i class="bi bi-info-circle-fill me-2"></i>Info
-                                </button>
-
-                                <div id="collapseSortViz" class="collapse">
-                                    <div class="mt-4 card-text alert alert-info">
-                                        <p>Visualisierung verschiedener Sortierverfahren als interaktive
-                                            Kommandozeilen-Anwendung.</p>
                                     </div>
                                 </div>
 
